# luymas-ai

./: .env.example  .gitattributes  .gitignore  LuymasAI.spec  README.md  README_USB.txt  autorun.inf  build_exe.py  build_windows_exe.py  install.bat  install.sh  installed_models.md  launcher.bat  launcher.py  luymas.spec  main.py  requirements.txt  research.md  start.bat  worklog.md
.github/workflows/: build.yml
agents/: __init__.py  architect.py  base.py  caretaker.py  coder_back.py  coder_front.py  designer.py  guardian.py  ops.py  pdg.py  pm.py  talent_scout.py  tester.py
config/: agents.yaml  models.yaml
core/: __init__.py  api_injector.py  auto_updater.py  captcha_solver.py  email_factory.py  experience_learner.py  github_scout.py  hardware_detector.py  identity_manager.py  memory.py  messenger.py  orchestrator.py  pdf_generator.py  self_improver.py  usb_builder.py
data/design_updates/: design_updater_state.json
db/: custom.db
design/: design_plugins.py  design_updater.py  image_generator.py
docker/: Dockerfile  docker-compose.yml  entrypoint.sh
prisma/: schema.prisma
src/app/: globals.css  layout.tsx  page.tsx
src/components/luymas/: admin-dashboard.tsx  admin-panel.tsx  chat-panel.tsx  (+5 more)
src/lib/: chat-store.ts  skill-loader.ts
studio/: app.js  architecture.html  index.html  style.css
templates/desktop/: README.md  package.json
templates/desktop/src-tauri/: Cargo.toml
templates/desktop/src-tauri/src/: main.rs
templates/mobile/: App.tsx  README.md  app.json  package.json
templates/web/: README.md  package.json
tests/: test_agents.py
(+8 files in other folders)
